JS added for Print page button

--- a/Server/ChefGPT.Server.csproj
+++ b/Server/ChefGPT.Server.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.5" />
+    <PackageReference Include="Microsoft.JSInterop" Version="7.0.9" />
+    <PackageReference Include="Microsoft.JSInterop.WebAssembly" Version="7.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
   </ItemGroup>
 
