--- a/Shared/ChefGPT.Shared.csproj
+++ b/Shared/ChefGPT.Shared.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.JSInterop" Version="7.0.9" />
+    <PackageReference Include="Microsoft.JSInterop.WebAssembly" Version="7.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 </Project>
