--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -34,6 +34,16 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:7104",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:7104;http://localhost:5041"
+      },
+      "distributionName": ""
     }
   },
   "iisSettings": {
